# biscuit

./: .gitignore  .gitmodules  .travis.yml  About.md  CMakeLists.txt  Epiread.md  Gemfile  LICENSE  Makefile  README.md  README2.md  _config.yml  config.h  index.md  test.py  test.sh
.github/ISSUE_TEMPLATE/: biscuit-issue.md
.github/workflows/: check_build.yml
_posts/: 2019-03-30-welcome-to-jekyll.markdown
docker/: Dockerfile  README.md
docs/: Epiread.md  Makefile  allele_meth.md  methylextraction.md  mutation.md  pileup.md
docs/alignment/: QC.md  alignment.md  bam_operation.md  understand_bam.md  visualization.md
docs/source/: align_bisulfite_converted_reads.rst  conf.py  download_and_install.rst  duplicate_marking.rst  epiread.rst  help.rst  index.rst  license.rst  measure_cytosine_retention_and_snp.rst  measure_cytosine_retention_and_snp_test.rst  nucleosome_depleted_region.rst
include/: biscuit.h  encode.h  pileup.h  refseq.h  stats.h  wqueue.h  wstr.h  wvec.h  wzbed.h  wzcbs.h  wzhmm.h  wztarget.h
include/aln/: bntseq.h  bwa.h  bwamem.h  bwasort.h  bwt.h
include/klib/: kseq.h  kstring.h  ksw.h  kvec.h
include/libsamtools-0.1.19/: bam.h
lib/aln/: CMakeLists.txt  align.c  bntseq.c  bntseq.h  bwa.c  bwa.h  bwamem.c  bwamem.h  bwamem_extra.c  bwamem_pair.c  bwasort.c  bwt.c  bwt.h  bwt_gen.c  bwtaln.h  bwtgap.c  bwtgap.h  bwtindex.c  bwtsw2.h  bwtsw2_aux.c  bwtsw2_core.c  bwtsw2_pair.c  fastmap.c  kbtree.h  khash.h  kopen.c  kseq.h  ksort.h  ksw.h  kvec.h  mem_alnreg.c  mem_alnreg.h  mem_alnreg_format.c  mem_pair.c  memchain.c  memchain.h  smem_itr.c  utils.c  utils.h
lib/htslib/: config.h  htscodecs.mk  htslib-uninstalled.pc  version.h
lib/htslib/htscodecs/: NEWS.md
lib/htslib/htscodecs/tests/: arith_dynamic_test.c  entropy.c  rANS_static4x16pr_test.c  rANS_static_test.c  tokenise_name3_test.c
lib/klib/: Makefile  kstring.c  ksw.c
lib/libsamtools-0.1.19/: Makefile  bam_index.c  bam_rmdup.c  bam_sort.c  faidx.c  faidx.h  main.c
lib/sgsl/: Makefile
lib/sgsl/specfunc/: gamma.c
lib/sgsl/test/: test.c
lib/utils/: Makefile  README.md  encode.c  encode.h  stats.c  stats.h  wints.h  wqueue.h  wstring.h  wzcbs.c  wzcbs.h  wzhmm.c  wztsv.h
lib/utils/test/: Makefile  test.tsv  test_tsv.c
scripts/: Makefile  QC.sh  build_biscuit_QC_assets.pl  build_test.org  confirm_download.sh  create_release.sh  flip_pbat_strands.sh  pybiscuit.py  setup.sh  test.py  utils.sh
specfunc/: erfc.c  expint.c  log.c  psi.c  trig.c  zeta.c
src/: CMakeLists.txt  asm_pairwise.c  bamfilter.c  bamfilter.h  bc.c  bc.h  bisc_utils.c  bisc_utils.h  biscuit.h  biscuit.h.in  bsconv.c  bsconv.h  bsstrand.c  bsstrand.h  cinread.c  cinread.h  copyseg.c  epiread.c  epiread.h  epiread_rectangle.c  indel_realign.c  main.c  markdup.c  mergecg.c  ndr.c  nome.c  pileup.c  pileup.h  qc.c  qc.h  refcache.h  refseq.h  somatic.c  tview.c  vcf2bed.c
src/align/: bntseq.h  bs_main.c  bwa.c  bwamem.c  bwamem.h  bwtindex.c  fastmap.c
src/archive/: correct_bsstrand.c
src/get_unmapped/: get_unmapped.c
src/hemifinder/: hemifinder.c
src/pileup/: pileup.c
src/pileup_cytosine/: pileup_cytosine.c
src/sample_trinuc/: sample_trinuc.c
test/: test.c
